finished styling for reset password and recovery

--- a/client/src/styles/Username.module.css
+++ b/client/src/styles/Username.module.css
@@ -11,11 +11,7 @@
 }
 
 .btn{
-    @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
-}
-
-.btn:hover{
-    background-color: #ff6a6a;
+    @apply flex w-3/4 justify-center rounded-md bg-cyan-700 px-3 py-3 text-lg font-semibold leading-6 text-white shadow-sm hover:bg-cyan-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2;
 }
 
 .glass{
@@ -28,7 +24,22 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     @apply border-l-4 rounded-r-lg md:rounded-r-none border-gray-100 shrink-0 h-3/4 w-[80%] md:w-[40%] py-20 px-7 min-w-max;
 }
+.glassOutro{
+    background: rgba(255, 255, 255, 0.55);
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    /* border-radius: 16px; */
+    box-shadow: 0 2px 30px #4747470b;
+    backdrop-filter: blur(7.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    @apply border-l-4 rounded-xl border-gray-100 shrink-0 h-3/4 lg:w-[50%] md:w-[70%] w-[80%] py-20 px-7 min-w-max;
+}
+
 
 .ocean{
     @apply hidden h-full md:h-3/4  w-[50%]  xl:flex;
+}
+
+.otpInput {
+    @apply text-center text-6xl border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-cyan-600;
 }
