--- a/client/src/styles/Username.module.css
+++ b/client/src/styles/Username.module.css
@@ -24,6 +24,18 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     @apply border-l-4 rounded-r-lg md:rounded-r-none border-gray-100 shrink-0 h-3/4 w-[80%] md:w-[40%] py-20 px-7 min-w-max;
 }
+
+.glassRegister{
+    background: rgba(255, 255, 255, 0.55);
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    /* border-radius: 16px; */
+    box-shadow: 0 2px 30px #4747470b;
+    backdrop-filter: blur(7.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    @apply border-l-4 rounded-r-lg md:rounded-r-none border-gray-100 shrink-0 h-[90%] w-[80%] lg:w-[40%] py-20 px-7 min-w-max;
+
+}
 .glassOutro{
     background: rgba(255, 255, 255, 0.55);
     border-top-left-radius: 12px;
@@ -39,7 +51,14 @@
 .ocean{
     @apply hidden h-full md:h-3/4  w-[50%]  xl:flex;
 }
+.oceanRegister{
+    @apply hidden h-full md:h-[90%]  w-[50%]  xl:flex;
+}
 
 .otpInput {
     @apply text-center text-6xl border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-cyan-600;
+}
+
+input[type='file'] {
+    display: none;
 }
